# AMKB-GUI

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES  build.py  pyproject.toml
.agents/: decisions.md  machines.md  repo-guidance.md  state.md
.agents/review/: 2026-07-22-holistic-branch-review.md  outcomes.md
.github/workflows/: ci.yml  desktop.yml
am_configurator/: __init__.py  __main__.py  ai_capability.py  ai_catalog.py  atomic_io.py  credentials.py  desktop.py  device.py  device_mapping.py  ffmpeg_runtime.py  generation.py  generation_admission.py  library.py  llm.py  local_ai_runtime.py  local_animation.py  local_model.py  macros.py  media.py  ollama_client.py  procedural.py  procedural_generation.py  protocol.py  reader.py  recipe_inference.py  recipe_provider.py  server.py  store.py  writer.py
assets/: am-configurator.icns
build_tools/: __init__.py  ffmpeg_bundle.py  finalize_ffmpeg_bundle.py  finalize_llama_bundle.py  llama_bundle.py  prepare_ffmpeg.py  prepare_llama.py  qualify_recipe_model.py  release_info.py
packaging/: am_configurator.spec  launcher.py
tests/: test_ai_capability.py  test_ai_routes.py  test_app.py  test_credentials.py  test_desktop.py  test_device_mapping.py  test_ffmpeg_bundle.py  test_generation.py  test_generation_admission.py  test_legacy_inline_generator_removed.py  test_library.py  test_local_ai_runtime.py  test_local_animation.py  test_media.py  test_ollama_client.py  test_packaging.py  test_procedural.py  test_procedural_generation.py  test_protocol.py  test_recipe_inference.py  test_recipe_provider.py
(+32 files in other folders)
