[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "am-configurator"
version = "0.1.0"
description = "Standalone Angry Miao keyboard configurator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "keyring==25.7.0",
  "pillow>=10.0",
  "pyserial>=3.5",
]

[project.optional-dependencies]
desktop = [
  "pywebview>=6.2.1",
  "pywebview[qt]>=6.2.1; sys_platform == 'linux'",
]
build = ["pyinstaller>=6.21.0"]

[project.gui-scripts]
am-configurator = "am_configurator.desktop:main"

[tool.hatch.build.targets.wheel]
packages = ["am_configurator"]
